--- a/src/project/lineMap/component/VersionPage.scss
+++ b/src/project/lineMap/component/VersionPage.scss
@@ -2,14 +2,13 @@
     margin-top: 15px;
 
     .version-today {
-        background-color: var(--tiklab-blue);
         height: 32px;
         line-height: 32px;
         width: 60px;
         border-radius: 4px;
-        color: #fff;
         text-align: center;
         cursor: pointer;
+        border: 1px solid #d9d9d9;
     }
 
     .version-action {
@@ -61,11 +60,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: var(--tiklab-blue);
+        
 
     }
 
     .version-name:hover {
+        color: var(--tiklab-blue);
         background-color: var(--tiklab-gray-400);
     }
 
