--- a/src/projectSet/common/components/ProjectSetDetailAside.scss
+++ b/src/projectSet/common/components/ProjectSetDetailAside.scss
@@ -10,7 +10,7 @@
         .ant-layout-sider-children {
             .projectSet-aside {
                 display: flex;
-                background: var(--tiklab-gray);
+                background: var(--tiklab-gray-600);
                 height: 100%;
                 flex-direction: column;
                 ul {
