--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -75,7 +75,7 @@
             border-right: 1px solid #f0f0f0;
             .projectSet-aside {
                 height: 100%;
-                background: var(--tiklab-gray);
+                background: var(--tiklab-gray-600);
                 .projectSet-title {
                     height: 40px;
                     display: flex;
