--- a/src/statistics/components/Statistics.scss
+++ b/src/statistics/components/Statistics.scss
@@ -1,8 +1,8 @@
-.porject-statistics {
+.statistics {
     background-color: #fff;
     height: calc(100vh - 48px);
 
-    .porject-statistics-content {
+    .statistics-content {
         height: 100%;
         overflow: auto;
         .ant-row {
