--- a/src/statistics/components/StatisticsAside.scss
+++ b/src/statistics/components/StatisticsAside.scss
@@ -1,10 +1,23 @@
-.projectSet-statistics-aside {
+.project-statistics-aside {
     background: #fff;
     width: 250px;
     border-right: 2px solid var(--tiklab-gray-200);
     height: 100%;
 
+    .statistics-top-title {
+        padding: 10px 20px;
+        font-size: var(--tiklab-font-16);
+        font-weight: var(--tiklab-font-weight-bold);
+        border-bottom: 1px var(--tiklab-gray-200) solid;
+        
+    }
+
+    .statistics-type-title:hover {
+        background-color: var(--tiklab-gray-300);
+    }
+
     .statistics-type-title {
+        cursor: pointer;
         padding: 0 20px;
         height: 40px;
         line-height: 40px;
@@ -13,22 +26,13 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        cursor: pointer;
+
         &-left {
             display: flex;
             align-items: center;
         }
     }
-    .statistics-type-title:hover {
-        background-color: var(--tiklab-gray-300);
-    }
-    .statistics-top-title {
-        padding: 10px 20px;
-        font-size: var(--tiklab-font-16);
-        font-weight: var(--tiklab-font-weight-bold);
-        border-bottom: 1px var(--tiklab-gray-200) solid;
 
-    }
 
     .statistics-menu-firstmenu:hover {
         cursor: pointer;
@@ -50,6 +54,8 @@
             width: 100%;
             align-items: center;
             padding-left: 43px;
+            padding-right: 20px;
+            justify-content: space-between;
         }
 
         &-select {
