--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -1,10 +1,10 @@
 .home {
     height: calc(100vh - var(--tiklab-head-height));
     overflow: auto;
-    background: var(--tiklab-gray-600);
+    // background: var(--tiklab-gray-600);
     position: relative;
     z-index: 0;
-    padding: 0 20px 20px;
+    padding: 15px 20px 20px;
 
     .home-tab {
         display: flex;
@@ -28,9 +28,9 @@
         }
     }
 
-    .home-content {
-        background: var(--tiklab-gray-600);
-    }
+    // .home-content {
+    //     background: var(--tiklab-gray-600);
+    // }
 
     .title {
         width: 100%;
@@ -182,6 +182,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            // border-bottom: 1px solid #f0f0f0;
             .more:hover {
                 text-decoration: underline;
             }
@@ -194,13 +195,15 @@
                 align-items: center;
             }
         }
-
+        &-list{
+            margin-top: 10px;
+        }
         .project-item {
             display: flex;
             align-items: center;
             margin-bottom: 10px;
             .project-item-content {
-                .content-name {
+                .content-name:hover {
                     cursor: pointer;
                     color: var(--tiklab-blue);
                 }
@@ -215,7 +218,7 @@
             align-items: center;
             margin-bottom: 10px;
             .work-content {
-                .content-name {
+                .content-name:hover {
                     cursor: pointer;
                     color: var(--tiklab-blue);
                 }
@@ -231,7 +234,7 @@
             align-items: center;
             margin-bottom: 10px;
             .version-content {
-                .content-name {
+                .content-name:hover {
                     cursor: pointer;
                     color: var(--tiklab-blue);
                 }
@@ -247,7 +250,7 @@
             align-items: center;
             margin-bottom: 10px;
             .sprint-content {
-                .content-name {
+                .content-name:hover {
                     cursor: pointer;
                     color: var(--tiklab-blue);
                 }
