--- a/src/project/common/components/ProjectLayout.scss
+++ b/src/project/common/components/ProjectLayout.scss
@@ -5,7 +5,7 @@
     }
 
     .project-detail-side {
-        background-color: var(--tiklab-gray-600);
+        // background-color: var(--tiklab-gray-600);
         border-right: 1px solid #f0f0f0;
 
         .ant-layout-sider-children {
@@ -156,8 +156,6 @@
             height: 100%;
         }
     }
-
-
 }
 
 
