--- a/src/projectSet/overview/components/ProjectSetSurvey.scss
+++ b/src/projectSet/overview/components/ProjectSetSurvey.scss
@@ -10,22 +10,33 @@
         display: flex;
         align-items: center;
     }
+    .box-title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 16px;
+        font-weight: var(--tiklab-font-weight-bold);
+        height: 30px;
+        line-height: 30px;
+        margin-bottom: 10px;
+    }
     .projectSet-survey-top {
         display: flex;
         justify-content: space-between;
         width: 100%;
-        
+        margin-bottom: 15px;
         .survey-top-left {
             flex: 1;
             height: 100px;
             border-radius: 4px;
             height: fit-content;
-            background-color: #ffffff;
+            // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+            padding: var(--tiklab-padding-item);
+            background-color: #fff;
             .projectSet-info {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding: 10px;
                 .svg-icon {
                     margin-right: 10px;
                 }
@@ -41,11 +52,12 @@
             .projectSet-info-content-item {
                 height: 40px;
                 line-height: 40px;
+                // font-weight: var(--tiklab-font-weight-bold);
+                // font-size: 16px;
             }
             .projectSet-infobottom {
                 display: flex;
                 flex-wrap: wrap;
-                padding: 10px;
             }
             .projectSet-info-item {
                 width: 50%;
@@ -63,19 +75,9 @@
             flex: 1;
             border-radius: 4px;
             margin-left: 20px;
-            background-color: #ffffff;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .more {
-                    color: var(----tiklab-blue);
-                }
-            }
+            // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+            padding: var(--tiklab-padding-item);
+            background-color: #fff;
             &-list {
                 margin-top: 10px;
             }
@@ -115,166 +117,91 @@
         display: flex;
         justify-content: space-between;
         
-        .projectSet-pending-workitem {
-            flex: 1;
-            border-radius: 4px;
-            background-color: #ffffff;
-            margin-top: 15px;
-            padding-bottom: 15px;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .more {
-                    color: var(--tiklab-blue);
-                }
-            }
-            &-list {
-                margin-top: 10px;
-                .dynamic-item {
-                    padding: 0 20px;
-                    margin-bottom: 10px;
-                    cursor: pointer;
-                }
-            }
-            .projectSet-pending-workitem-item {
-                .projectSet-pending-workitem-left {
-                    display: flex;
-                    align-items: center;
-                }
-                .projectSet-pending-workitem-process {
-                    width: 80px;
-                }
-                width: 100%;
-                padding: 0 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
+       
+        
+       
+    }
+    .dynamic-box {
+        background-color: #fff;
+        border-radius: 4px;
+        flex: 1;
+        // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+        padding: var(--tiklab-padding-item);;
+        min-height: 300px;
+        .dynamic-list {
+            margin-top: 10px;
+            .dynamic-item {
+                margin-bottom: 10px;
                 cursor: pointer;
-                .projectSet-pending-workitem-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
+            }
+        }
+        .dynamic-item {
+            .dynamic-item-left {
+                display: flex;
+                align-items: center;
+            }
+            .dynamic-icon {
+                width: 30px;
+                height: 30px;
+                border-radius: 4px;
+                margin-right: 10px;
+            }
+            .dynamic-name {
                 .name {
                     color: var(--tiklab-blue)
                 }
-                .projectSet-pending-workitem-date {
-                    color: #999;
-                    font-size: 12px;
-                }
             }
-        }
-        .projectSet-sprint-box {
-            background-color: #ffffff;
-            border-radius: 4px;
-            flex: 1;
-            margin: 15px 0  0;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .more {
-                    color: var(--tiklab-blue);
-                }
-            }
-            .projectSet-sprint-list {
-                margin-top: 10px;
-            }
-            .projectSet-sprint-item {
-                .projectSet-sprint-item-left {
-                    display: flex;
-                    align-items: center;
-                }
-                .projectSet-sprint-item-icon {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 10px;
-                }
-                width: 100%;
-                padding: 0 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                cursor: pointer;
-                .projectSet-sprint-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .projectSet-sprint-name {
-                    .name {
-                        color: var(--tiklab-blue)
-                    }
-                }
-                
-                .projectSet-sprint-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
-            .dynamic-box {
-                background-color: #fff;
-                border-radius: 4px;
-                flex: 1;
-                padding-bottom: 15px;
-                &-title {
-                    width: 100%;
-                    height: 40px;
-                    line-height: 40px;
-                    font-weight: var(--tiklab-font-weight-bold);
-                    padding: 0 10px; 
-                    display: flex;
-                    justify-content: space-between;
-                    .more {
-                        color: var(--tiklab-blue);
-                        margin-left: 10px;
-                    }
-                }
-                .dynamic-list {
-                    margin-top: 10px;
-                    .dynamic-item {
-                        padding: 0 20px;
-                        margin-bottom: 10px;
-                        cursor: pointer;
-                    }
-                }
-                .dynamic-item {
-                    .dynamic-item-left {
-                        display: flex;
-                        align-items: center;
-                    }
-                    .dynamic-icon {
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 4px;
-                        margin-right: 10px;
-                    }
-                    .dynamic-name {
-                        .name {
-                            color: var(--tiklab-blue)
-                        }
-                    }
-                    
-                    .dynamic-date {
-                        color: #999;
-                        font-size: 12px;
-                    }
-                }
+            
+            .dynamic-date {
+                color: #999;
+                font-size: 12px;
             }
         }
     }
-    
+    .projectSet-pending-workitem {
+           
+        border-radius: 4px;
+        background-color: #ffffff;
+        margin-top: 15px;
+        padding-bottom: 15px;
+        // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+        padding: var(--tiklab-padding-item);
+        margin-bottom: 15px;
+        min-height: 300px;
+        &-list {
+            .dynamic-item {
+                cursor: pointer;
+            }
+        }
+        .projectSet-pending-workitem-item {
+            width: 100%;
+            padding: 0 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            cursor: pointer;
+            .projectSet-pending-workitem-left {
+                display: flex;
+                align-items: center;
+            }
+            .projectSet-pending-workitem-process {
+                width: 80px;
+            }
+            
+            .projectSet-pending-workitem-icon {
+                width: 30px;
+                height: 30px;
+                border-radius: 4px;
+                margin-right: 10px;
+            }
+            // .name {
+            //     color: var(--tiklab-blue)
+            // }
+            .projectSet-pending-workitem-date {
+                color: #999;
+                font-size: 12px;
+            }
+        }
+    }
 }
