--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -6,7 +6,6 @@
     height: calc(100vh - 48px);
     overflow: auto;
     padding: var(--tiklab-padding-item);
-    background-color: var(--tiklab-gray-600);
     .ant-row {
         background: #f0f2f5;
         height: 100%;
@@ -15,20 +14,12 @@
         background: #fff;
         padding: 20px;
     }
-    .title {
-        line-height: 50px;
-        font-size: 16px;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding-left: 20px;
-        border-radius: 4px;
-    }
-
     .sprint-title {
         width: 100%;
-        height: 40px;
-        line-height: 40px;
+        height: 30px;
+        line-height: 30px;
         font-weight: var(--tiklab-font-weight-bold);
-        padding: 0 20px; 
+        font-size: 16px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -43,98 +34,78 @@
             align-items: center;
         }
     }
-    .sprint-info-box {
-        padding: 10px;
-        background-color: #fff;
-        border-radius: 4px;
-        width: 500px;
-
-        .sprint-info-title {
-            display: flex;
-            align-items: center;
-            font-size: 16px;
-            font-weight: var(--tiklab-font-weight-bold);
-            height: 40px;
-            line-height: 40px;
-            margin-bottom: 10px;
-            &-icon {
-                width: 30px;
-                height: 30px;
-            }
-        }
-
-        .sprint-container {
-            .tiklab-profile .ant-avatar {
-                width: 24px !important;
-                height: 24px !important;
-            }
-
-            .sprint-item {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                margin-bottom: 10px;
-                cursor: pointer;
-                .item-content {
-                    .item-top, .item-bottom {
-                        height: 30px;
-                        line-height: 30px;
-                    }
-                    .item-bottom {
-                        color: var(--tiklab-gray-500);
-                        font-size: 12px;
-                    }
-                    .item-progress {
-                        width: 300px;
-                        display: flex;
-                        align-items: center;
-                    }
-                }
-            }
-
-            .sprint-work {
-                display: flex;
-                gap: 20px;
-            }
-
-        }
-    }
+    
     .sprint-survey-top {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: 20px;
-        .top-left, .top-right {
+        margin-bottom: 15px;
+        .sprint-info-box {
+            padding: var(--tiklab-padding-item);
             background-color: #fff;
             border-radius: 4px;
-            height: 420px;
-            flex: 1;
-        }
-        .top-left {
-            .box-top, .box-middle {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 20px;
-            }
-            .sprint-time {
-                width: 100px;
-            }
-            .box-bottom {
-                padding: 20px;
+            width: 500px;
+            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+
+            .sprint-info-title {
                 display: flex;
                 align-items: center;
-                .ant-progress-line {
-                    width: 80%;
+                font-size: 16px;
+                font-weight: var(--tiklab-font-weight-bold);
+                height: 40px;
+                line-height: 40px;
+                margin-bottom: 10px;
+                &-icon {
+                    width: 30px;
+                    height: 30px;
                 }
+            }
+    
+            .sprint-container {
+                .tiklab-profile .ant-avatar {
+                    width: 24px !important;
+                    height: 24px !important;
+                }
+    
+                .sprint-item {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    margin-bottom: 10px;
+                    cursor: pointer;
+                    .item-content {
+                        .item-top, .item-bottom {
+                            height: 30px;
+                            line-height: 30px;
+                        }
+                        .item-bottom {
+                            color: var(--tiklab-gray-500);
+                            font-size: 12px;
+                        }
+                        .item-progress {
+                            width: 300px;
+                            display: flex;
+                            align-items: center;
+                        }
+                    }
+                }
+    
+                .sprint-work {
+                    display: flex;
+                    gap: 20px;
+                }
+    
             }
         }
         .burn-down-box {
-            width: calc(100% - 520px);
+            width: calc(100% - 515px);
             padding: 10px;
             background-color: #fff;
             border-radius: 4px;
-            height: 420px;
+            height: 430px;
+            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+            padding: var(--tiklab-padding-item);
             .burn-down {
                 width: calc(100% - 20px);
                 height: calc(100% - 20px);
@@ -142,106 +113,19 @@
         }
         
     }
-    .sprint-survey-bottom {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-        gap: 20px;
-        .bottom-left, .bottom-right {
-            background-color: #fff;
-            border-radius: 4px;
-            height: 300px;
-            flex: 1;
-        }
-        .bottom-left {
-            .sprint-survey-work {
-                display: flex;
-                margin: 20px;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                .work-item {
-                    box-shadow: rgba(9,30,66,0.25) 0px 1px 1px, rgba(9,30,66,0.31) 0px 0px 1px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    height: 80px;
-                    width: 47%;
-                    margin-bottom: 20px;
-                    border-radius: 4px;
-                    .work-icon {
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 4px;
-                    }
-                    .work-count {
-                        .work-num, .work-text {
-                            text-align: center;
-                            width: 100px;
-                            height: 30px;
-                            line-height: 30px;
-                            font-weight: var(--tiklab-font-weight-bold);
-                        }
-                        .work-text {
-                            color: #999;
-                        }
-                    }
-                }
-            }
-        }
-        .bottom-right {
-            .sprint {
-                padding: 0 20px;
-                height: 230px;
-                overflow: auto;
-                margin: 10px 0;
-            }
-            .sprint::-webkit-scrollbar {
-                width: 0 !important;
-                height: 0 !important;
-            }
-            .sprint-item {
-                &-left {
-                    display: flex;
-                    align-items: center;
-                    width: 150px;
-                    
-                }
-                .sprint-name {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                .sprint-icon {
-                    width: 20px;
-                    height: 20px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .sprint-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
-        }
+    .sprint-pending-workitem {
+        padding: var(--tiklab-padding-item);
+        margin-bottom: 15px;
+        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
     }
-    .sprint-survey-middle {
-        background-color: #fff;
-        border-radius: 4px;
-        margin-top: 20px;
-        width: 100%;
-        .sprint-pending-workitem {
-            padding-bottom: 20px;
-        }
+    .dynamic-box {
+        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+        padding: var(--tiklab-padding-item);
         .dynamic-item {
-            padding: 0 20px;
             margin-bottom: 10px;
             cursor: pointer;
         }
+
         .dynamic-list {
             padding-bottom: 20px;
         }
