--- a/src/statistics/components/StatisticsMore.scss
+++ b/src/statistics/components/StatisticsMore.scss
@@ -1,6 +1,14 @@
-.statistics-more {
+.statistics-advert {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100%;
+    margin-top: 100px;
+    flex-direction: column;
+    gap: 10px;
+    &-title {
+        font-size: 18px;
+    }
+    .statistics-advert-icon {
+        width: 200px;
+        height: 200px;
+    }
 }
