--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -46,7 +46,6 @@
             background-color: #fff;
             border-radius: 4px;
             width: 500px;
-            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
 
             .sprint-info-title {
                 display: flex;
@@ -104,7 +103,6 @@
             background-color: #fff;
             border-radius: 4px;
             height: 430px;
-            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
             padding: var(--tiklab-padding-item);
             .burn-down {
                 width: calc(100% - 20px);
@@ -116,11 +114,11 @@
     .sprint-pending-workitem {
         padding: var(--tiklab-padding-item);
         margin-bottom: 15px;
-        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+        background-color: #fff;
     }
     .dynamic-box {
-        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
         padding: var(--tiklab-padding-item);
+        background-color: #fff;
         .dynamic-item {
             margin-bottom: 10px;
             cursor: pointer;
