--- a/src/version/overview/components/VersionSurvey.scss
+++ b/src/version/overview/components/VersionSurvey.scss
@@ -53,7 +53,6 @@
             border-radius: 4px;
             width: 500px;
             height: 420px;
-            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
 
             .version-info-title {
                 display: flex;
@@ -118,7 +117,6 @@
             background-color: #fff;
             border-radius: 4px;
             height: 420px;
-            box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
             padding: var(--tiklab-padding-item);
             .burn-down {
                 width: calc(100% - 20px);
@@ -129,13 +127,13 @@
     }
 
     .version-pending-workitem {
+        background-color: #fff;
         padding: var(--tiklab-padding-item);
         margin-bottom: 15px;
-        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
     }
 
     .dynamic-box {
-        box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
+        background-color: #fff;
         padding: var(--tiklab-padding-item);
         .dynamic-item {
             margin-bottom: 10px;
