--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -77,6 +77,16 @@ $form-input-color: #e3e8f07d;
     margin-right: 5px;
 }
 
+.icon-40 {
+    width: 40px;
+    height: 40px;
+}
+
+.icon-32 {
+    width: 32px;
+    height: 32px;
+    margin-right: 5px;
+}
 .img-icon {
     width: 16px;
     height: 16px;
