--- a/src/home/insight/components/Insight.scss
+++ b/src/home/insight/components/Insight.scss
@@ -1,7 +1,7 @@
 
 .insight {
     height: 100%;
-    background-color: var(--tiklab-gray-600);
+    background: #fff;
     overflow: auto;
     .insight-content {
         height: calc(100vh - 50px);
