--- a/src/home/insight/components/ProjectSetWorkItem.scss
+++ b/src/home/insight/components/ProjectSetWorkItem.scss
@@ -4,6 +4,7 @@
     margin-bottom: 10px;
     height: 100%;
     background-color: #fff;
+    box-shadow: 0 2px 15px rgba(0,0,0,.15);
     &-top {
         height: 40px;
         line-height: 40px;
