--- a/src/work/components/WorkFilterProject.scss
+++ b/src/work/components/WorkFilterProject.scss
@@ -1,10 +1,10 @@
-.work-quick-filter {
+.work-project-filter {
     .select-view {
         height: 32px;
     }
     .select-content {
         padding: 5px 10px;
         background-color: var(--tiklab-gray);
-        width: 100px;
+        width: 80px;
     }
 }
