--- a/src/project/setting/basicInfo/components/BasicInfo.scss
+++ b/src/project/setting/basicInfo/components/BasicInfo.scss
@@ -31,6 +31,7 @@
         margin-bottom: 15px;
     }
     .change-botton {
+        cursor: pointer;
         text-align: center;
         height: 30px;
         line-height: 30px;
