修改事项详情页展开自定义表单的按钮位置

--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -121,6 +121,7 @@
                 height: 30px;
                 margin-bottom: 10px;
                 padding: 6px 0;
+                width: 30%;
             }
             .close {
                 transition: all 0.2s;
