--- a/src/work/components/WorkDocumentAdd.scss
+++ b/src/work/components/WorkDocumentAdd.scss
@@ -28,7 +28,7 @@
         .select-view {
             height: 32px;
             line-height: 32px;
-            min-width: 200px;
+            min-width: 100px;
             max-width: 250px;
             background: #f5f5f5;
             padding: 0 10px;
@@ -43,6 +43,9 @@
         .document-add-submit {
             cursor: pointer;
             color: var(--tiklab-blue);
+            height: 32px;
+            line-height: 32px;
+            overflow: hidden;
         }
     }
 
