--- a/src/project/common/components/ProjectChangeModal.scss
+++ b/src/project/common/components/ProjectChangeModal.scss
@@ -73,7 +73,7 @@
             align-items: center;
             border-radius: 5px;
             margin-bottom: 5px;
-            .project-info {
+            .project-item-info {
                 line-height: 30px;
                 flex: 1;
                 .project-type {
