--- a/src/home/insight/components/NewInsight.scss
+++ b/src/home/insight/components/NewInsight.scss
@@ -1,10 +1,14 @@
 
 
-.new-insight {
+.new-insight-row {
+    height: 100%;
+    overflow: auto;
+   .new-insight {
     display: flex;
     justify-content: space-between;
     height: 100%;
     padding: var(--tiklab-padding-item);
+    // background-color: #fff;
     .project-breadcrumb-icon {
         width: 25px;
         height: 25px;
@@ -84,7 +88,9 @@
 
 .new-insight-report {
     width: 250px;
+} 
 }
+
 
 .show-report {
     display: block;
