--- a/src/work/components/WorkRelation.scss
+++ b/src/work/components/WorkRelation.scss
@@ -4,6 +4,7 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 10px;
+        line-height: 32px;
     }
 
     .work-title {
