--- a/src/home/common/components/TodoList.scss
+++ b/src/home/common/components/TodoList.scss
@@ -5,6 +5,7 @@
 .todo-list-page {
     padding: var(--tiklab-padding-item);;
     background: #fff;
+    min-height: calc(100vh - 145px);
     .todo-select {
         width: 200px;
     }
