--- a/src/home/insight/components/ProjectOperateTable.scss
+++ b/src/home/insight/components/ProjectOperateTable.scss
@@ -5,7 +5,7 @@
     margin-bottom: 10px;
     height: 100%;
     background-color: #fff;
-    box-shadow: 0 2px 15px rgba(0,0,0,.15);
+    // box-shadow: 0 2px 15px rgba(0,0,0,.15);
     .project-breadcrumb {
         display: flex;
         align-items: center;
