--- a/src/project/workLog/components/LogContent.scss
+++ b/src/project/workLog/components/LogContent.scss
@@ -1,3 +1,9 @@
+.workItem-log {
+    padding: 20px;
+    height: calc(100vh - 49px);
+    background: #fff;
+}
+
 
 .log-tab-filter {
     display: flex;
