--- a/src/home/insight/components/UserWorkItem.scss
+++ b/src/home/insight/components/UserWorkItem.scss
@@ -1,5 +1,5 @@
 .user-workitem {
-    box-shadow: rgb(0 0 0 / 15%) 0px 2px 15px;
+    // box-shadow: rgb(0 0 0 / 15%) 0px 2px 15px;
     padding: 12px 20px;
     border-radius: 4px;
     margin-bottom: 10px;
